crates/ruff_python_parser/src/snapshots/ruff_python_parser__lexer__tests__tstring_named_unicode.snap
---
source: crates/ruff_python_parser/src/lexer.rs
expression: lex_source(source)
---
## Tokens
```
[
    (
        TStringStart,
        0..2,
        TokenFlags(
            DOUBLE_QUOTES | T_STRING,
        ),
    ),
    (
        TStringMiddle,
        2..28,
        TokenFlags(
            DOUBLE_QUOTES | T_STRING,
        ),
    ),
    (
        TStringEnd,
        28..29,
        TokenFlags(
            DOUBLE_QUOTES | T_STRING,
        ),
    ),
    (
        Newline,
        29..29,
    ),
]
```
