crates/ruff_python_parser/src/snapshots/ruff_python_parser__lexer__tests__tstring_named_unicode_raw.snap
---
source: crates/ruff_python_parser/src/lexer.rs
expression: lex_source(source)
---
## Tokens
```
[
    TStringStart 0..3 (flags = DOUBLE_QUOTES | T_STRING | RAW_STRING_LOWERCASE),
    TStringMiddle 3..5 (flags = DOUBLE_QUOTES | T_STRING | RAW_STRING_LOWERCASE),
    Lbrace 5..6,
    Identifier 6..12,
    Rbrace 12..13,
    TStringMiddle 13..20 (flags = DOUBLE_QUOTES | T_STRING | RAW_STRING_LOWERCASE),
    TStringEnd 20..21 (flags = DOUBLE_QUOTES | T_STRING | RAW_STRING_LOWERCASE),
    Newline 21..21,
]
```
