crates/ruff_python_parser/src/snapshots/ruff_python_parser__lexer__tests__tstring_nested.snap
---
source: crates/ruff_python_parser/src/lexer.rs
expression: lex_source(source)
---
## Tokens
```
[
    TStringStart 0..2 (flags = DOUBLE_QUOTES | T_STRING),
    TStringMiddle 2..6 (flags = DOUBLE_QUOTES | T_STRING),
    Lbrace 6..7,
    TStringStart 7..9 (flags = DOUBLE_QUOTES | T_STRING),
    TStringMiddle 9..13 (flags = DOUBLE_QUOTES | T_STRING),
    Lbrace 13..14,
    Identifier 14..15,
    Plus 16..17,
    TStringStart 18..20 (flags = DOUBLE_QUOTES | T_STRING),
    Lbrace 20..21,
    Identifier 21..24,
    Rbrace 24..25,
    TStringEnd 25..26 (flags = DOUBLE_QUOTES | T_STRING),
    Rbrace 26..27,
    TStringEnd 27..28 (flags = DOUBLE_QUOTES | T_STRING),
    Rbrace 28..29,
    TStringMiddle 29..33 (flags = DOUBLE_QUOTES | T_STRING),
    TStringEnd 33..34 (flags = DOUBLE_QUOTES | T_STRING),
    TStringStart 35..37 (flags = T_STRING),
    TStringMiddle 37..41 (flags = T_STRING),
    Lbrace 41..42,
    TStringStart 42..44 (flags = T_STRING),
    TStringMiddle 44..47 (flags = T_STRING),
    TStringEnd 47..48 (flags = T_STRING),
    Rbrace 48..49,
    TStringMiddle 49..55 (flags = T_STRING),
    Lbrace 55..56,
    TStringStart 56..58 (flags = DOUBLE_QUOTES | T_STRING),
    TStringMiddle 58..65 (flags = DOUBLE_QUOTES | T_STRING),
    TStringEnd 65..66 (flags = DOUBLE_QUOTES | T_STRING),
    Rbrace 66..67,
    TStringEnd 67..68 (flags = T_STRING),
    Newline 68..68,
]
```
