crates/ruff_python_parser/src/snapshots/ruff_python_parser__lexer__tests__tstring_prefix.snap
---
source: crates/ruff_python_parser/src/lexer.rs
expression: lex_source(source)
---
## Tokens
```
[
    TStringStart 0..2 (flags = DOUBLE_QUOTES | T_STRING),
    TStringEnd 2..3 (flags = DOUBLE_QUOTES | T_STRING),
    TStringStart 4..6 (flags = DOUBLE_QUOTES | T_STRING),
    TStringEnd 6..7 (flags = DOUBLE_QUOTES | T_STRING),
    TStringStart 8..11 (flags = DOUBLE_QUOTES | T_STRING | RAW_STRING_LOWERCASE),
    TStringEnd 11..12 (flags = DOUBLE_QUOTES | T_STRING | RAW_STRING_LOWERCASE),
    TStringStart 13..16 (flags = DOUBLE_QUOTES | T_STRING | RAW_STRING_LOWERCASE),
    TStringEnd 16..17 (flags = DOUBLE_QUOTES | T_STRING | RAW_STRING_LOWERCASE),
    TStringStart 18..21 (flags = DOUBLE_QUOTES | T_STRING | RAW_STRING_UPPERCASE),
    TStringEnd 21..22 (flags = DOUBLE_QUOTES | T_STRING | RAW_STRING_UPPERCASE),
    TStringStart 23..26 (flags = DOUBLE_QUOTES | T_STRING | RAW_STRING_UPPERCASE),
    TStringEnd 26..27 (flags = DOUBLE_QUOTES | T_STRING | RAW_STRING_UPPERCASE),
    TStringStart 28..31 (flags = DOUBLE_QUOTES | T_STRING | RAW_STRING_LOWERCASE),
    TStringEnd 31..32 (flags = DOUBLE_QUOTES | T_STRING | RAW_STRING_LOWERCASE),
    TStringStart 33..36 (flags = DOUBLE_QUOTES | T_STRING | RAW_STRING_LOWERCASE),
    TStringEnd 36..37 (flags = DOUBLE_QUOTES | T_STRING | RAW_STRING_LOWERCASE),
    TStringStart 38..41 (flags = DOUBLE_QUOTES | T_STRING | RAW_STRING_UPPERCASE),
    TStringEnd 41..42 (flags = DOUBLE_QUOTES | T_STRING | RAW_STRING_UPPERCASE),
    TStringStart 43..46 (flags = DOUBLE_QUOTES | T_STRING | RAW_STRING_UPPERCASE),
    TStringEnd 46..47 (flags = DOUBLE_QUOTES | T_STRING | RAW_STRING_UPPERCASE),
    Newline 47..47,
]
```
