crates/ruff_python_parser/src/snapshots/ruff_python_parser__lexer__tests__tstring_single_quote_escape_mac_eol.snap
---
source: crates/ruff_python_parser/src/lexer.rs
expression: tstring_single_quote_escape_eol(MAC_EOL)
---
## Tokens
```
[
    (
        TStringStart,
        0..2,
        TokenFlags(
            T_STRING,
        ),
    ),
    (
        TStringMiddle,
        2..19,
        TokenFlags(
            T_STRING,
        ),
    ),
    (
        TStringEnd,
        19..20,
        TokenFlags(
            T_STRING,
        ),
    ),
    (
        Newline,
        20..20,
    ),
]
```
