crates/ruff_python_parser/src/snapshots/ruff_python_parser__lexer__tests__tstring_single_quote_escape_unix_eol.snap
---
source: crates/ruff_python_parser/src/lexer.rs
expression: tstring_single_quote_escape_eol(UNIX_EOL)
---
## Tokens
```
[
    TStringStart 0..2 (flags = T_STRING),
    TStringMiddle 2..19 (flags = T_STRING),
    TStringEnd 19..20 (flags = T_STRING),
    Newline 20..20,
]
```
